# COMP155Project

./: CMakeLists.txt
include/: administrator.h  employee.h  helper.h  leave_manager.h  leave_request.h  user.h
src/: main.cpp
